# PVyzMgS

./: .gitignore  pyproject.toml
.github/workflows/: examples.yml  release.yml
examples/: EXAMPLES.md
examples/boundary_value_problems/: bvp.py
examples/cahn_hilliard/: cahn_hilliard.py
examples/contact_process/: contact_process.py
examples/degradation/: degradation.py
examples/evolution/: ess.py
examples/game_of_life/: gol.py  gol_patterns.py
examples/ising_model/: antiferromagnet.py  ising.py
examples/rock_paper_scissors/: rps.py
examples/simple_examples/: advection.py  diffusion.py
examples/sirs_model/: sirs.py
src/pvyzmgs/: animation.py  plotting.py  resampling.py  simulation.py
